--- a/Kada/Kada/Kada.ui
+++ b/Kada/Kada/Kada.ui
@@ -1,29 +1,66 @@
-<UI version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>KadaClass</class>
- <widget class="QMainWindow" name="KadaClass" >
-  <property name="objectName" >
-   <string notr="true">KadaClass</string>
-  </property>
-  <property name="geometry" >
+ <widget class="QMainWindow" name="KadaClass">
+  <property name="geometry">
    <rect>
-	<x>0</x>
-	<y>0</y>
-	<width>600</width>
-	<height>400</height>
+    <x>0</x>
+    <y>0</y>
+    <width>412</width>
+    <height>275</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Kada</string>
   </property>
-  <widget class="QMenuBar" name="menuBar" />
-  <widget class="QToolBar" name="mainToolBar" />
-  <widget class="QWidget" name="centralWidget" />
-  <widget class="QStatusBar" name="statusBar" />
+  <widget class="QWidget" name="centralWidget">
+   <widget class="QTile" name="BananaTile">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>100</width>
+      <height>100</height>
+     </rect>
+    </property>
+    <property name="Imageid" stdset="0">
+     <string>banana</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>412</width>
+     <height>26</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QToolBar" name="mainToolBar">
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
+  <widget class="QStatusBar" name="statusBar"/>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QTile</class>
+   <extends>QWidget</extends>
+   <header>QTile.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
-   <include location="Kada.qrc"/>
+  <include location="../QTile/image.qrc"/>
  </resources>
  <connections/>
-</UI>
+ <slots>
+  <slot>clicks()</slot>
+ </slots>
+</ui>
