--- a/Kada/Kada/settingsDialog.ui
+++ b/Kada/Kada/settingsDialog.ui
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>QtaddDialog</class>
- <widget class="QDialog" name="QtaddDialog">
+ <class>settingsDialog</class>
+ <widget class="QDialog" name="settingsDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1280</width>
-    <height>800</height>
+    <width>400</width>
+    <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QTile" name="bananaTile">
+  <widget class="QTile" name="qTile">
    <property name="geometry">
     <rect>
-     <x>90</x>
+     <x>150</x>
      <y>110</y>
      <width>100</width>
      <height>100</height>
     </rect>
    </property>
    <property name="Imageid" stdset="0">
-    <string>banana</string>
+    <string>settings</string>
    </property>
   </widget>
  </widget>
@@ -35,22 +35,5 @@
   </customwidget>
  </customwidgets>
  <resources/>
- <connections>
-  <connection>
-   <sender>bananaTile</sender>
-   <signal>clicks()</signal>
-   <receiver>QtaddDialog</receiver>
-   <slot>reject()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>179</x>
-     <y>164</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>296</x>
-     <y>177</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
